--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,8 @@
   --lavender: #e7e6f7;
   --pale-purple: #e3d0d8;
   --payne-gray: #4d6a6d;
+  --light-green:#EAE9E2 ;
+  --granito:#463F3A;
 }
 
 * {
