--- a/src/app/admin/home-admin/components/home/homeAdmin.component.css
+++ b/src/app/admin/home-admin/components/home/homeAdmin.component.css
@@ -6,7 +6,7 @@
 .main-content {
   position: relative;
   min-height: 100vh;
-  top: 0;
+  top: 100px;
   transition: all 0.5s ease;
-  max-width: 100%;
+  max-width: 90%;
 }
