--- a/src/app/admin/sign-in-admin/components/form/sign-in-form.component.html
+++ b/src/app/admin/sign-in-admin/components/form/sign-in-form.component.html
@@ -1,68 +1,84 @@
 <ng-container *ngIf="data$ | async as data">
-  <div class="main-container">
-    <main *ngIf="data.serverError$" class="error-main">
-      <server-error-c [error]="data.serverError$.message"></server-error-c>
-    </main>
-    <main class="sign-in-main">
-      <form class="sign-in-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <section class="form-section user-section">
-          <h1>Admin</h1>
-        </section>
-        <section class="form-section">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email"
-            formControlName="email"
-          />
-          <div *ngIf="email?.touched">
-            <p *ngIf="email?.hasError('email')" class="error-message">
-              Invalid Email
-            </p>
-            <p *ngIf="email?.hasError('required')" class="error-message">
-              Required
-            </p>
+  <section style="background-color: #D3C4A4; min-height: 100vh;">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="px-4 py-5 text-center text-lg-start" style="border-radius: 15px; max-width: 400px; width: 100%; margin: auto;">
+        <div class="container">
+          <div class="row gx-lg-5 align-items-center">
+            <div class="col-lg-12 mb-5 mb-lg-0">
+              <div class="card">
+                <div class="card-body py-5 px-md-5">
+                  <main *ngIf="data.serverError$" class="error-main">
+                    <server-error-c [error]="data.serverError$.message"></server-error-c>
+                  </main>
+                  <main class="sign-in-main">
+                    <form class="sign-in-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+                      <section class="form-section user-section">
+                        <h2 class="form-text fw-bold mb-2 text-uppercase">Admin</h2>
+                        <p class="form-text">Please login as an admin to register a collaborator.</p>
+                      </section>
+                      <section class="form-section">
+                        <div data-mdb-input-init class="form-outline form-white mb-4">
+                          <input
+                            type="email"
+                            id="email"
+                            class="form-control form-control-lg"
+                            formControlName="email"
+                            placeholder=""
+                          />
+                          <label class="text-under form-text form-label" for="email">Email</label>
+                          <div *ngIf="email?.touched">
+                            <p *ngIf="email?.hasError('email')" class="error-message">Invalid Email</p>
+                            <p *ngIf="email?.hasError('required')" class="error-message">Required</p>
+                          </div>
+                        </div>
+                      </section>
+                      <section class="form-section">
+                        <div data-mdb-input-init class="form-outline form-white mb-4">
+                          <input
+                            type="password"
+                            id="password"
+                            class="form-control form-control-lg"
+                            formControlName="password"
+                            placeholder=""
+                          />
+                          <label class="text-under form-text form-label" for="password">Password</label>
+                          <div *ngIf="password?.touched">
+                            <p *ngIf="password?.hasError('minlength')" class="error-message">Minimum 6 characters</p>
+                            <p *ngIf="password?.hasError('required')" class="error-message">Required</p>
+                          </div>
+                        </div>
+                      </section>
+                      <section *ngIf="!data.isLoading$" class="form-section d-flex justify-content-between">
+                        <button
+                          type="button"
+                          class="btn btn-back btn-outline-light btn-sm px-4"
+                          (click)="goBack()"
+                        >
+                          Back
+                        </button>
+                        <button
+                          [ngClass]="{
+                            'form-section-btn': true,
+                            'btn-disable': form.invalid,
+                            'btn-enable': form.valid
+                          }"
+                          type="submit"
+                          class="btn btn-outline-light btn-sm px-4"
+                        >
+                          Sign In
+                        </button>
+                      </section>
+                      <section *ngIf="data.isLoading$" class="form-section form-section-loader">
+                        <loader-c></loader-c>
+                      </section>
+                    </form>
+                  </main>
+                </div>
+              </div>
+            </div>
           </div>
-        </section>
-        <section class="form-section">
-          <label for="password">Password</label>
-          <input
-            type="text"
-            name="password"
-            id="password"
-            placeholder="Password"
-            formControlName="password"
-          />
-          <div *ngIf="password?.touched">
-            <p *ngIf="password?.hasError('minlength')" class="error-message">
-              Minimum 6 characters
-            </p>
-            <p *ngIf="password?.hasError('required')" class="error-message">
-              Required
-            </p>
-          </div>
-        </section>
-        <section *ngIf="!data.isLoading$" class="form-section">
-          <button
-            [ngClass]="{
-              'form-section-btn': true,
-              'btn-disable': form.invalid,
-              'btn-enable': form.valid
-            }"
-            type="submit"
-          >
-            Sign In
-          </button>
-        </section>
-        <section
-          *ngIf="data.isLoading$"
-          class="form-section form-section-loader"
-        >
-          <loader-c></loader-c>
-        </section>
-      </form>
-    </main>
-  </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </ng-container>
