--- a/src/app/share/components/left-bar/leftBar.component.html
+++ b/src/app/share/components/left-bar/leftBar.component.html
@@ -1,4 +1,4 @@
-<nav
+<nav class="margin"
   [ngClass]="{
     sidebar: true,
     active: isActive()
@@ -6,6 +6,7 @@
 >
   <section class="top">
     <div class="logo">
+      <h1 class="title nav-item">ABCall</h1>
       <i (click)="updatePosition()" class="bx bx-menu menu"></i>
     </div>
   </section>
@@ -17,4 +18,6 @@
       </a>
     </li>
   </ul>
+  
 </nav>
+
